--- a/client/src/pages/Home/Hero.css
+++ b/client/src/pages/Home/Hero.css
@@ -1,5 +1,5 @@
 
-.home-heroContent::after {
+/* .home-heroContent::after {
     position: absolute;
     content: '';
     bottom: 0;
@@ -7,7 +7,7 @@
     height: 1px;
     width: 100%;
     background-color: var(--cl-gray-2);
-}
+} */
 
 .home-heroContent {
     position: relative;
@@ -20,7 +20,7 @@
 }
 
 .home-heroText {
-    position: relative;
+    /* position: relative; */
     max-width: 600px;
 }
 
@@ -78,6 +78,7 @@
     margin-right: 60px;
     margin-left: 20px;
     align-self: center;
+    /* position: relative; */
     /* background-color: aqua; */
 }
 
@@ -124,6 +125,7 @@
         padding-top: 60px;
         align-items: center;
         justify-content: center;
+        position: inherit;
     }
     .home-heroText h2 {
         font-size: 2.5em;
@@ -146,5 +148,28 @@
         color: var(--cl-light);
         
     }
+    .home-heroSci {
+        display: none;
+    
+    }
+}
+
+@media all and (max-width: 425px) {
+    .home-heroContent {
+        padding: 20px 30px;
+    }
+    .home-heroText h2 {
+        font-size: 1.7em;
+    }
+    .home-heroLink {
+        min-width: 150px;
+    }
+    .home-heroList {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        line-height: 1.5;
+    }
+    
 }
 
